# mixar-uv-unwrap-assignment

./: README.md
starter_code/part1_cpp/: ALGORITHM.md  CMakeLists.txt  TEST_RESULTS.txt
starter_code/part1_cpp/src/: lscm.cpp  packing.cpp  seam_detection.cpp  topology.cpp  unwrap.cpp
starter_code/part1_cpp/tests/: test_unwrap.cpp
starter_code/part2_python/: ReadMe.md  cli.py
starter_code/part2_python/venv2/: pyvenv.cfg
starter_code/part2_python/venv2/Scripts/: activate  activate.bat
starter_code/part3_blender/: ReadMe.md
starter_code/part3_blender/uv_unwrap_addon/: __init__.py  operators.py  panels.py  uvunwrap.lib
starter_code/part3_blender/uv_unwrap_addon/core/: __init__.py  cache.py
starter_code/part3_blender/uv_unwrap_addon/uvwrap/: __init__.py  bindings.py  metrics.py  optimizer.py  processor.py
